--- a/flaskr/templates/admin_score.html
+++ b/flaskr/templates/admin_score.html
@@ -45,7 +45,10 @@
       </a>
     </div>
     <div class="col col-6 visualization">
-      <div class="progress progress-circle" data-percentage="50">
+      <div
+        class="progress progress-circle"
+        data-percentage="{{fico.percentage}}"
+      >
         <span class="progress-left">
           <span class="progress-bar"></span>
         </span>
@@ -54,13 +57,13 @@
         </span>
         <div class="progress-value">
           <div>
-            700<br />
-            <span>Good</span>
+            {{fico.score}}<br />
+            <span>{{fico.rating}}</span>
           </div>
         </div>
       </div>
       <div class="progress-chart">
-        <div class="line" style="left: 50%"></div>
+        <div class="line" style="left: {{fico.percentage}}%"></div>
         <div class="row progress">
           <p class="col col-2">18-25</p>
           <div
@@ -118,15 +121,15 @@
         </div>
       </div>
       <div class="mt-4 d-flex justify-content-center">
-        <a href="/Customer_Information.html" style="margin: 0 0.5rem">
+        <a href={{"/view/customer-information?ID=" + fico.ID | string}} style="margin: 0 0.5rem">
           <button type="button" class="mr-4 btn btn-secondary btn-lg">
             Back
           </button>
         </a>
-        <a href="/Check.html" style="margin: 0 0.5rem">
+        <a href="/view/check" style="margin: 0 0.5rem">
           <button type="button" class="btn btn-warning btn-lg">Check</button>
         </a>
-        <a href="/Index.html" style="margin: 0 0.5rem">
+        <a href="/view/" style="margin: 0 0.5rem">
           <button type="button" class="btn btn-success btn-lg">Accept</button>
         </a>
       </div>
