--- a/flaskr/templates/admin_score.html
+++ b/flaskr/templates/admin_score.html
@@ -2,66 +2,30 @@
 <div class="container mt-4">
   <h3>Score</h3>
   <div class="row mt-4 score">
-    <div class="col col-6">
-      <a href="/Helping.html" class="content-card">
-        <div class="border border-secondary rounded p-4">
-          <div class="header d-flex align-items-center">
-            <i class="fa-sharp fa-solid fa-arrow-up arrow-icon arrow-up"></i>
-            <h3>What's helping</h3>
-          </div>
-          <h4>First Reason is that...</h4>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt,
-            odit.
-          </p>
-          <h4>Second Reason is that...</h4>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto
-            dicta, sed obcaecati quis unde maiores magnam fugiat ex voluptatibus
-            vero.
-          </p>
-        </div>
-      </a>
-      <a href="/Hurting.html" class="content-card">
-        <div class="border border-secondary rounded p-4">
-          <div class="header d-flex align-items-center">
-            <i
-              class="fa-sharp fa-solid fa-arrow-down arrow-icon arrow-down"
-            ></i>
-            <h3>What's hurting</h3>
-          </div>
-          <h4>First Reason is that...</h4>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt,
-            odit.
-          </p>
-          <h4>Second Reason is that...</h4>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto
-            dicta, sed obcaecati quis unde maiores magnam fugiat ex voluptatibus
-            vero.
-          </p>
-        </div>
-      </a>
-    </div>
+
+    <iframe srcdoc="{{shap_plots}}" style="width: 2000; height: 300; border: none;" ></iframe>
+  </div>
+  <div class="row mt-4 score">
     <div class="col col-6 visualization">
       <div
-        class="progress progress-circle"
-        data-percentage="{{fico.percentage}}"
+      class="progress progress-circle"
+      data-percentage="{{fico.percentage}}"
       >
-        <span class="progress-left">
-          <span class="progress-bar"></span>
-        </span>
-        <span class="progress-right">
-          <span class="progress-bar"></span>
-        </span>
-        <div class="progress-value">
-          <div>
-            {{fico.score}}<br />
-            <span>{{fico.rating}}</span>
-          </div>
+      <span class="progress-left">
+        <span class="progress-bar"></span>
+      </span>
+      <span class="progress-right">
+        <span class="progress-bar"></span>
+      </span>
+      <div class="progress-value">
+        <div>
+          {{fico.score}}<br />
+          <span>{{fico.rating}}</span>
         </div>
       </div>
+    </div>
+    </div>
+    <div class="col col-6 visualization">
       <div class="progress-chart">
         <div class="line" style="left: {{fico.percentage}}%"></div>
         <div class="row progress">
@@ -126,7 +90,7 @@
             Back
           </button>
         </a>
-        <a href="/view/check" style="margin: 0 0.5rem">
+        <a href={{"/view/check?ID=" + fico.ID | string}} style="margin: 0 0.5rem">
           <button type="button" class="btn btn-warning btn-lg">Check</button>
         </a>
         <a href="/view/" style="margin: 0 0.5rem">
