--- a/flaskr/templates/customer_list.html
+++ b/flaskr/templates/customer_list.html
@@ -43,11 +43,17 @@ Customer List
         class="d-flex justify-content-center fixed-bottom"
       >
         <ul class="pagination">
-          <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-          <li class="page-item"><a class="page-link" href="#">1</a></li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item"><a class="page-link" href="#">Next</a></li>
+          {%if paging.prev_page == True%}
+          <li class="page-item"><a class="page-link" href={{"/view/customer-list?page=" + paging.cur_page | string}}>Previous</a></li>
+          {%else%}
+          <li class="page-item"><a class="page-link" href="#">...</a></li>
+          {%endif%}
+          <li class="page-item"><a class="page-link" href="#">{{paging.cur_page + 1}}</a></li>
+          {%if paging.next_page == True%}
+          <li class="page-item"><a class="page-link" href={{"/view/customer-list?page=" + (paging.cur_page + 2) | string}}>Next</a></li>
+          {%else%}
+          <li class="page-item"><a class="page-link" href="#">...</a></li>
+          {%endif%}
         </ul>
       </nav>
     </div>
